// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/Table/HeaderCell WithAttributes play-test 1`] = `
<div data-test-block="true">
  <table>
    <thead>
      <tr class>
        <th id="htmlId"
            class="_headerCell_1jim6_1 _headerCell_standard_1jim6_1  _headerCell_left_1jim6_60 dummyClassname"
            lang="nb"
            data-testid="123ID"
        >
          cake
        </th>
      </tr>
    </thead>
  </table>
</div>
`;

exports[`Tester/Table/HeaderCell WithChildren play-test 1`] = `
<div data-test-block="true">
  <table>
    <thead>
      <tr class>
        <th class="_headerCell_1jim6_1 _headerCell_standard_1jim6_1  _headerCell_left_1jim6_60">
          columnheader
        </th>
      </tr>
    </thead>
  </table>
</div>
`;

exports[`Tester/Table/HeaderCell WithDisabled play-test 1`] = `
<div data-test-block="true">
  <table>
    <thead>
      <tr class>
        <th class="_headerCell_1jim6_1 _headerCell_noPadding_1jim6_17  _headerCell_left_1jim6_60">
          <button class="_headerCellSortButton_1jim6_20 _headerCell_standard_1jim6_1"
                  type="button"
                  disabled
          >
            columnheader
            <svg class="_systemIcon_o38m2_2 _systemIcon_medium_o38m2_10 _headerCellSortButtonIcon_1jim6_31"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-labelledby="svgtitle-:r0:"
                 aria-hidden="false"
                 role="img"
            >
              <title id="svgtitle-:r0:">
                Sorterbar
              </title>
              <path d="M7 4L12 8.95937L10.6364 10.2719L7.96364 7.61875V20H6.03636V7.61875L3.36364 10.2719L2 8.95937L7 4ZM17 21L12 16.0406L13.3636 14.7281L16.0364 17.3813V5H17.9636V17.3813L20.6364 14.7281L22 16.0406L17 21Z"
                    fill-rule="evenodd"
                    clip-rule="evenodd"
              >
              </path>
            </svg>
          </button>
        </th>
      </tr>
    </thead>
  </table>
</div>
`;

exports[`Tester/Table/HeaderCell WithRef play-test 1`] = `
<div data-test-block="true">
  <table>
    <thead>
      <tr class>
        <th class="_headerCell_1jim6_1 _headerCell_standard_1jim6_1  _headerCell_left_1jim6_60"
            id="dummyIdForwardedFromRef"
        >
          cake
        </th>
      </tr>
    </thead>
  </table>
</div>
`;
